--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -93,13 +93,13 @@ layout: default
                 <script src="{{ site.baseurl }}/js/md5.min.js"></script>
                 <script type="text/javascript">
                     var gitalk = new Gitalk({
-    			clientID: 'GitHub Application Client ID',
-    			clientSecret: 'GitHub Application Client Secret',
-    			repo: 'GitHub repo',
-    			owner: 'GitHub repo owner',
-    			admin:  ['GitHub repo owner and collaborators, only these guys can initialize github issues'],
-    			id: location.pathname,      // Ensure uniqueness and len
-    			distractionFreeMode: false  // Facebook-like distraction
+    		    clientID: '{{site.gitalk.clientID}}',
+    		    clientSecret: '{{site.gitalkClientsecret}}',
+    		    repo: '{{site.gitalk.repo}}',
+    		    owner: '{{site.gitalk.owner}}',
+    		    admin:  ['{{site.gitalk.admin}}'],
+    		    distractionFreeMode: {{site.gitalk.distractionFreeMode}}
+		    id: md5(localion.pathname),
                     });
                     gitalk.render('gitalk-container')
                 </script>
