--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -94,12 +94,12 @@ layout: default
                 <script type="text/javascript">
                     var gitalk = new Gitalk({
     		    clientID: '{{site.gitalk.clientID}}',
-    		    clientSecret: '{{site.gitalk.Clientsecret}}',
+    		    clientSecret: '{{site.gitalk.clientSecret}}',
     		    repo: '{{site.gitalk.repo}}',
     		    owner: '{{site.gitalk.owner}}',
     		    admin:  ['{{site.gitalk.admin}}'],
     		    distractionFreeMode: {{site.gitalk.distractionFreeMode}},
-		    id: md5(localion.pathname),
+		    id: md5(location.pathname),
                     });
                     gitalk.render('gitalk-container');
                 </script>
